--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fale com a Amanda</title>
+    <link rel="shortcut icon" href="image/mulher.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
